--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "backend/server.js",
   "scripts": {
-    "dev": "nodemon backend/server.js"
+    "dev": "cross-env NODE_ENV=development nodemon backend/server.js",
+    "start": "cross-env NODE_ENV=production nodemon backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +22,8 @@
     "mailtrap": "^3.4.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
