--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URI=mongodb+srv://ykaanayyildiz:5SGbSgjhNlCDAHor@papara-cashback.le99h.mongodb.net/papara-cashback?retryWrites=true&w=majority&appName=papara-cashback
+NODE_ENV=development
